# cryptochan

./: .gitignore  configure.ac
etc/: cryptochan.conf
src/: Makefile.am  buffer.c  buffer.h  client.c  client.h  common.c  common.h  cryptochan-config.c  cryptochan-config.h  cryptochan.c  cryptochan.h  cryptochan_config.c  cryptochan_config.h  cyclic-buffer.c  cyclic-buffer.h  cyclic_buffer.c  cyclic_buffer.h  cyclic_queue.c  cyclic_queue.h  dispatcher.c  dispatcher.h  ec_helper.c  ec_helper.h  max_scalar.h  random.c  random.h  server.c  server.h  session.c  session.h  test_cyclic_buffer.c  test_cyclic_queue  test_cyclic_queue.c
